--- a/html/pfappserver/root/admin/nodes.tt
+++ b/html/pfappserver/root/admin/nodes.tt
@@ -181,25 +181,27 @@
                 </form>
               </li>
               <li class="divider"></li>
-              <li class="" id="accordion-SwithGroup">
-                <a data-toggle="collapse" data-parent="#accordion-SwithGroup" href="#collapseSwitchGroup" class="collapsed">
-                    [% l('Switch Groups')%]
-                <i class="icon-chevron-up pull-right"></i></a>
-                <ul id="collapseSwitchGroup" class="collapse">
-                  <a data-toggle="collapse" data-parent="#collapseSwitchGroup" href="#collapseSwitchGroupDefault" class="collapsed">Default<i class="icon-chevron-up pull-right"></i></a>
-                    <li id="collapseSwitchGroupDefault" class="collapse">
-                      <ul>[% FOREACH switch IN switches %]
-                      <li><a href="#" data-toggle="pf-search-form" data-parent="#collapseSwitchGroupDefault" data-target="advanced">[% switch.id %]</a>
+              <li id="accordion-SwithGroup">
+                <a data-toggle="collapse" data-parent="#accordion-SwithGroup" href="#collapseSwitchGroup" class="collapsed">[% l('Switch Groups') %] <i class="icon-chevron-up pull-right"></i></a>
+                <ul id="collapseSwitchGroup" class="nav nav-list collapse">
+                  <li class="sidenav-subsection">
+                    <a data-toggle="collapse" data-parent="#collapseSwitchGroup" href="#collapseSwitchGroupDefault" class="collapsed">[% l('Default') %]<i class="icon-chevron-up pull-right"></i></a>
+                  </li>
+                  <li id="collapseSwitchGroupDefault" class="collapse">
+                    <ul>[% FOREACH switch IN switches %]
+                      <li class="sidenav-subsection-extend"><a href="#" data-toggle="pf-search-form" data-parent="#collapseSwitchGroupDefault" data-target="advanced">[% switch.id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="switch_id"/>
                           <input type="hidden" name="searches.0.op" value="is"/>
                           <input type="hidden" name="searches.0.value" value="[% switch.id %]"/>
                         </form>
-                        </li>
+                      </li>
                       [% END %]</ul>
-                    </li>
+                  </li>
                   [% FOREACH switch_group IN switch_groups %]
+                  <li>
                     <a data-toggle="collapse" data-parent="#collapseSwitchGroup" href="#collapse_[% switch_group.id %]" class="collapsed">[% switch_group.id %]<i class="icon-chevron-up pull-right"></i></a>
+                  </li>
                     <li id="collapse_[% switch_group.id %]" class="collapse">
                       <ul>[% FOREACH member IN switch_group.members %]
                         <li><a href="#" data-toggle="pf-search-form" data-parent="#collapse_[% switch_group.id %]"data-target="advanced">[% member.id %]</a>
@@ -220,9 +222,9 @@
                 <a data-toggle="collapse" data-parent="#accordion-Role" href="#collapseRole" class="collapsed">
                   [% l('Roles') %]
                 <i class="icon-chevron-up pull-right"></i></a>
-                <ul id="collapseRole" class="collapse">
+                <ul id="collapseRole" class="nav nav-list collapse">
                   [% FOREACH role IN roles %]
-                    <li>
+                    <li class="sidenav-subsection">
                       <a href="#" data-toggle="pf-search-form" data-target="advanced" data-parent="#collapseRole">[% role.name %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="category"/>
@@ -238,8 +240,8 @@
                 <a data-toggle="collapse" data-parent="#accordion-OS" href="#collapseOS" class="collapsed">
                    [% l('OS') %]
                 <i class="icon-chevron-up pull-right"></i></a>
-                <ul id="collapseOS" class="collapse">
-                  <li>
+                <ul id="collapseOS" class="nav nav-list collapse">
+                  <li class="sidenav-subsection">
                     <a href="#" data-toggle="pf-search-form" data-target="advanced" data-parent="#collapseOS">Windows</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="device_class"/>
@@ -247,7 +249,7 @@
                         <input type="hidden" name="searches.0.value" value="Windows"/>
                       </form>
                   </li>
-                  <li>
+                  <li class="sidenav-subsection">
                     <a href="#" data-toggle="pf-search-form" data-target="advanced" data-parent="#collapseOS">Linux</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="device_class"/>
@@ -255,7 +257,7 @@
                         <input type="hidden" name="searches.0.value" value="Linux"/>
                       </form>
                   </li>
-                  <li>
+                  <li class="sidenav-subsection">
                     <a href="#" data-toggle="pf-search-form" data-target="advanced" data-parent="#collapseOS">MacOS</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="device_class"/>
