--- a/html/pfappserver/root/static/scss/_sidenav.scss
+++ b/html/pfappserver/root/static/scss/_sidenav.scss
@@ -2,36 +2,53 @@
 
 $sidenavCategoryColorActive: lighten($blue, 30%);
 
+/**
+ * Sidenav is fixed on the left side of the viewpane and dark by default.
+ * Right content has to be offset accordingly.
+ */
 .sidenav {
-  position: fixed;
+  @extend .navbar-inverse;
+  border-color: $navbarInverseBorder;
   height: 100%;
   margin-left: 0;
-  padding-top: $baseFontSize;
-  overflow: hidden;
   overflow-y: auto;
+  overflow: hidden;
+  padding-top: $baseFontSize;
+  position: fixed;
 }
 
+/**
+ * Fluid row without gutter.
+ */
 .sidenav-fluid {
   @include grid-fluid($fluidGridColumnWidth + $fluidGridGutterWidth, 0);
 }
 
+/**
+ * Icon-based navigation list.
+ */
 .sidenav-icon-list {
-  display: inline-block;
+  //display: inline-block;
   li {
     min-height: 2em;
-    padding: $paddingLarge; 
+    padding: 11px 0;
     text-align: center;
   }
 }
 
 .sidenav {
-  @extend .navbar-inverse;
-  border-color: $navbarInverseBorder;
-
   .nav-header,
   .nav-header li {
     color: $sidenavCategoryColorActive;
     text-shadow: none;
+  }
+
+  // A link in a header is an icon, usually a link to the documentation
+  .nav-header a {
+    display: inline-block;
+    font-size: 1rem;
+    position: relative;
+    bottom: -2px;
   }
 
   .nav > li > a:hover {
@@ -42,13 +59,81 @@ $sidenavCategoryColorActive: lighten($blue, 30%);
   .nav .active > a:hover {
     background-color: initial;
   }
+
+  $sidenavItemHeight: $baseLineHeight + 6px; // line-height + padding
+  $sidenavItemBulletSize: 8px;
+
+  .sidenav-subsection {
+    position: relative;
+    &.active > a {
+      background: transparent !important;
+    }
+    // The line
+    &:not(:last-child)::before {
+      content: '';
+      position: absolute;
+      background: darken($navbarInverseText, 30%);
+      width: 2px;
+      height: $sidenavItemHeight - $sidenavItemBulletSize;
+      left: $sidenavItemBulletSize/2 - 1px;
+      top: ($sidenavItemHeight + $sidenavItemBulletSize)/2 - 1px;
+    }
+    &:last-child::before {
+      //height: ($baseLineHeight + 6px) / 2; // line-height + padding
+    }
+    // The circle
+    &::after {
+      background-color: $navbarInverseBorder;
+      border: 2px solid darken($navbarInverseText, 30%);
+      top: 50%;
+      left: 0;
+      width: $sidenavItemBulletSize;
+      height: $sidenavItemBulletSize;
+      margin: -5px 0 0 0;
+      border-radius: 50%;
+      content: '';
+      position: absolute;
+      box-sizing: border-box;
+      transition: transform 0.3s, border-color 0.3s, border-width 0.3s;
+    }
+    &:not(.active):hover::after {
+      background-color: $white;
+      border-color: $white;
+    }
+    &.active::after {
+      border-width: 1px;
+      border-color: $white;
+      transform: scale3d(1.6,1.6,1);
+    }
+    a {
+      //@include gradient-vertical(darken($navbarInverseBackgroundHighlight, 10%), darken($navbarInverseBackground, 10%));
+      overflow: hidden;
+      padding-left: 2.5em;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
+  .sidenav-subsection-extend {
+    list-style: none;
+    &::before {
+      content: '';
+      position: absolute;
+      background: $navbarInverseText;
+      width: 2px;
+      height: $sidenavItemHeight;
+      left: $sidenavItemBulletSize/2 - 1px;
+      top: $sidenavItemBulletSize;
+    }
+  }
 }
 
 .sidenav-category {  
   @include gradient-vertical($navbarInverseBackgroundHighlight, $navbarInverseBackground);
 
   &.sidenav .nav .active > a,
-  &.sidenav .nav .active > a:hover {
+  &.sidenav .nav .active > a:hover,
+  &.sidenav .nav .active > a:focus {
+    background-color: initial;
     color: $sidenavCategoryColorActive;
     text-shadow: 0 0 6px $sidenavCategoryColorActive;
   }
@@ -60,6 +145,10 @@ $sidenavCategoryColorActive: lighten($blue, 30%);
   &.sidenav .nav .active > a {
     @include gradient-horizontal(lighten($navbarInverseBackgroundHighlight, 5%), lighten($navbarInverseBackgroundHighlight, 10%));
   }
+}
+
+.sidenav .nav-list .nav-list {
+  padding: 0;
 }
 
 .sidenav .divider {
