--- a/html/pfappserver/root/admin/reports.tt
+++ b/html/pfappserver/root/admin/reports.tt
@@ -31,7 +31,7 @@
               <li class="nav-header">[% l('ACCOUNTING') %]</li>
               [% list_entry('graph/nodebandwidth', 'Top 25 Bandwidth Consumers') | none %]
               [% list_entry('graph/osclassbandwidth', 'Bandwidth per Operating System') | none %]
-              <li class="nav-header">[% l('Custom reports') %]</li>
+              <li class="nav-header">[% l('Custom reports') %] [% doc('_custom_reports') | none %]</li>
               [% FOREACH report_id IN dynamic_reports.keys %]
               [% list_entry('dynamicreport/' _ report_id, dynamic_reports.$report_id) | none %]
               [% END %]
