--- a/html/pfappserver/root/static/scss/styles.scss
+++ b/html/pfappserver/root/static/scss/styles.scss
@@ -49,7 +49,9 @@
 
 // Components: Popovers
 @import "bootstrap/modals";
+@import "modals";
 @import "bootstrap/tooltip";
+@import "tooltip";
 @import "bootstrap/popovers";
 
 // Components: Misc
