--- a/html/pfappserver/root/admin/wrapper.tt
+++ b/html/pfappserver/root/admin/wrapper.tt
@@ -87,16 +87,18 @@
               [%- END %]
             </ul>
             <ul class="nav nav-header pull-right">
-              <li class="dropdown">
-                <a id="checkup_dropdown_toggle" class="dropdown-toggle" data-toggle="dropdown">[% l('Perform checkup') %]</a>
+              <li class="dropdown" data-toggle="tooltip" title="[% l('Perform checkup') %]">
+                <a href="" id="checkup_dropdown_toggle" class="dropdown-toggle" data-toggle="dropdown">
+                  <i class="icon-wrench"></i>
+                </a>
                 <ul class="dropdown-menu" id="checkup_dropdown">
                   <li class="disabled"><a><img src="/static/app/loader-48.gif"></a></li>
                 </ul>
               </li>
             </ul>
-            <ul class="nav pull-right">
+            <ul class="nav nav-header pull-right">
               <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown"><i class="icon-info-circle icon-white"></i></a>
+                <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-info-circle icon-white"></i></a>
                 <ul class="dropdown-menu">
                   <li class="disabled"><a><b>[% l('PacketFence version') %]</b>: [% pf_release | html %]</a></li>
                   <li class="disabled"><a><b>[% l('Server') %]</b>: [% server_hostname | html %]</a></li>
@@ -137,10 +139,10 @@
     <script type="text/javascript" src="[% c.uri_for('/static/js/vendor/jquery-ui.min.js') %]"></script>
     <script type="text/javascript" src="[% c.uri_for('/static/js/vendor/jquery-extra.min.js') %]"></script>
     <script type="text/javascript" src="[% c.uri_for('/static/js/vendor/bootstrap.min.js') %]"></script>
+    <script type="text/javascript" src="[% c.uri_for('/static/js/pfappserver.js') %]"></script>
 [% FOREACH js = jsFiles -%]
     <script type="text/javascript" src="[% c.uri_for("/static/${js}.js") %]" charset="UTF-8"></script>
 [% END -%]
-    <script type="text/javascript" src="[% c.uri_for('/static/js/pfappserver.js') %]"></script>
 
   </body>
 </html>
