--- a/html/pfappserver/root/admin/auditing_option82.tt
+++ b/html/pfappserver/root/admin/auditing_option82.tt
@@ -7,11 +7,13 @@
                 <a data-toggle="collapse" href="#collapseOption82SwitchGroup" class="collapsed">
                     [% l('Switch Groups')%]
                 <i class="icon-chevron-up pull-right"></i></a>
-                <ul id="collapseOption82SwitchGroup" class="collapse">
-                  <a data-toggle="collapse" data-parent="#collapseOption82SwitchGroup" href="#collapseOption82SwitchGroupDefault" class="collapsed">Default<i class="icon-chevron-up pull-right"></i></a>
-                    <li id="collapseOption82SwitchGroupDefault" class="collapse">
-                      <ul>[% FOREACH switch IN switches %]
-                      <li><a href="#" data-toggle="pf-search-form" data-parent="#collapseOption82SwitchGroupDefault" data-target="#search" data-form-target="#search">[% switch.id %]</a>
+                <ul id="collapseOption82SwitchGroup" class="nav nav-list collapse">
+                  <li class="sidenav-subsection">
+                    <a data-toggle="collapse" data-parent="#collapseOption82SwitchGroup" href="#collapseOption82SwitchGroupDefault" class="collapsed">Default<i class="icon-chevron-up pull-right"></i></a>
+                  </li>
+                  <li id="collapseOption82SwitchGroupDefault" class="collapse">
+                    <ul>[% FOREACH switch IN switches %]
+                      <li class="sidenav-subsection-extend"><a href="#" data-toggle="pf-search-form" data-parent="#collapseOption82SwitchGroupDefault" data-target="#search" data-form-target="#search">[% switch.id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="switch_id"/>
                           <input type="hidden" name="searches.0.op" value="equal"/>
