(web admin) Fix card content of DHCP Option82

--- a/html/pfappserver/root/dhcpoption82/index.tt
+++ b/html/pfappserver/root/dhcpoption82/index.tt
@@ -97,5 +97,7 @@
       </div>
     </div>
   </div>
-[% INCLUDE dhcpoption82/search.tt %]
+  <div class="card-block">
+    [% INCLUDE dhcpoption82/search.tt %]
+  </div>
 </div>
