--- a/html/pfappserver/root/pfqueue/index.tt
+++ b/html/pfappserver/root/pfqueue/index.tt
@@ -6,7 +6,7 @@
       <tr><th colspan="3">[%l('Queue Counts')%]</th></tr>
       <tr>
         <th>[% l('Queue') %]</th>
-        <th>[% l('Count') %]</th>
+        <th width="30%">[% l('Count') %]</th>
       </tr>
     </thead>
     [% FOREACH counter IN queue_counts %]
@@ -21,9 +21,9 @@
     <thead>
       <tr><th colspan="3">[%l('Outstanding Task Counters')%]</th></tr>
       <tr>
-        <th>[% l('Queue') %]</th>
+        <th width="30%">[% l('Queue') %]</th>
         <th>[% l('Task type') %]</th>
-        <th>[% l('Count') %]</th>
+        <th width="30%">[% l('Count') %]</th>
       </tr>
     </thead>
     [% FOREACH counter IN counters %]
@@ -46,16 +46,16 @@
     <thead>
       <tr><th colspan="3">[%l('Expired Task Counters')%]</th></tr>
       <tr>
-        <th>[% l('Queue') %]</th>
+        <th width="30%">[% l('Queue') %]</th>
         <th>[% l('Task type') %]</th>
-        <th>[% l('Count') %]</th>
+        <th width="30%">[% l('Count') %]</th>
       </tr>
     </thead>
     [% FOREACH counter IN miss_counters %]
       <tr>
-        <td> [% counter.queue %]</td>
+        <td>[% counter.queue %]</td>
         <td>[% counter.name %] </td>
-        <td> [% counter.count %]</td>
+        <td>[% counter.count %]</td>
       </tr>
     [% END %]
   </table>
