--- a/html/pfappserver/root/admin/auditing_option82.tt
+++ b/html/pfappserver/root/admin/auditing_option82.tt
@@ -12,31 +12,34 @@
                     <a data-toggle="collapse" data-parent="#collapseOption82SwitchGroup" href="#collapseOption82SwitchGroupDefault" class="collapsed">Default<i class="icon-chevron-up pull-right"></i></a>
                   </li>
                   <li id="collapseOption82SwitchGroupDefault" class="collapse">
-                    <ul>[% FOREACH switch IN switches %]
+                    <ul>
+                      [% FOREACH switch IN switches %]
                       <li class="sidenav-subsection-extend"><a href="#" data-toggle="pf-search-form" data-parent="#collapseOption82SwitchGroupDefault" data-target="#search" data-form-target="#search">[% switch.id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="switch_id"/>
                           <input type="hidden" name="searches.0.op" value="equal"/>
                           <input type="hidden" name="searches.0.value" value="[% switch.id %]"/>
                         </form>
-                        </li>
-                      [% END %]</ul>
-                    </li>
+                      </li>
+                      [% END %]
+                    </ul>
+                  </li>
                   [% FOREACH switch_group IN switch_groups %]
                   <li class="sidenav-subsection">
                     <a data-toggle="collapse" data-parent="#collapseOption82SwitchGroup" href="#collapse_[% switch_group.id %]" class="collapsed">[% switch_group.id %]<i class="icon-chevron-up pull-right"></i></a>
-                    <li id="collapse_[% switch_group.id %]" class="collapse">
-                      <ul>[% FOREACH member IN switch_group.members %]
-                        <li class="sidenav-subsection-extend"><a href="#" data-toggle="pf-search-form" data-parent="#collapse_[% switch_group.id %]"data-target="#search" data-form-target="#search">[% member.id %]</a>
-                          <form>
-                            <input type="hidden" name="searches.0.name" value="switch_id"/>
-                            <input type="hidden" name="searches.0.op" value="equal"/>
-                            <input type="hidden" name="searches.0.value" value="[% member.id %]"/>
-                          </form>
-                        </li>
+                  </li>
+                  <li id="collapse_[% switch_group.id %]" class="collapse">
+                    <ul>[% FOREACH member IN switch_group.members %]
+                      <li class="sidenav-subsection-extend"><a href="#" data-toggle="pf-search-form" data-parent="#collapse_[% switch_group.id %]"data-target="#search" data-form-target="#search">[% member.id %]</a>
+                        <form>
+                          <input type="hidden" name="searches.0.name" value="switch_id"/>
+                          <input type="hidden" name="searches.0.op" value="equal"/>
+                          <input type="hidden" name="searches.0.value" value="[% member.id %]"/>
+                        </form>
+                      </li>
                       [% END %]
-                      </ul>
-                    </li>
+                    </ul>
+                  </li>
                   [% END %]
                 </ul>
               </li>
