--- a/html/pfappserver/root/static/scss/_responsive-navbar.scss
+++ b/html/pfappserver/root/static/scss/_responsive-navbar.scss
@@ -7,4 +7,9 @@
   .navbar-fixed-top {
     margin-bottom: 0;
   }
+  .navbar-fixed-top .navbar-inner,
+  .navbar-fixed-bottom .navbar-inner {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
 }
