--- a/html/pfappserver/root/config/wmi/list.tt
+++ b/html/pfappserver/root/config/wmi/list.tt
@@ -10,12 +10,14 @@
           <tr>
             <td class="item"><a href="[% c.uri_for(c.controller.action_for('view'), [ item.id ]) %]">[% item.id | html %]</a></td>
             <td>
-              [%- IF can_access("WMI_CREATE") %]
-              <a class="btn btn-mini" href="[% c.uri_for(c.controller.action_for('clone'), [ item.id]) %]">[% l('Clone') %]</a>
-              [%- END %]
-              [%- IF can_access("WMI_DELETE") %]
-              <a class="btn btn-mini btn-danger" href="[% c.uri_for(c.controller.action_for('remove'), [ item.id ]) %]">[% l('Delete') %]</a>
-              [%- END %]
+              <div class="text-right">
+                [%- IF can_access("WMI_CREATE") %]
+                <a class="btn btn-mini" href="[% c.uri_for(c.controller.action_for('clone'), [ item.id]) %]">[% l('Clone') %]</a>
+                [%- END %]
+                [%- IF can_access("WMI_DELETE") %]
+                <a class="btn btn-mini btn-danger" href="[% c.uri_for(c.controller.action_for('remove'), [ item.id ]) %]">[% l('Delete') %]</a>
+                [%- END %]
+              </div>
             </td>
           </tr>
           [% END -%]
