--- a/html/pfappserver/root/admin/nodes.tt
+++ b/html/pfappserver/root/admin/nodes.tt
@@ -347,11 +347,14 @@
                         <tr>
                           <th colspan="2" class="pull-left">
                           <div class="control-group">
-                            <div class="input-daterange datepicker controls">
+                            <div class="input-daterange controls"
+                                 data-date-format="yyyy-mm-dd">
                                 <label class="control-label input-medium text-left">[% l('Online Between:') %]</label>
-                                <input type="text" class="input-small" name="online_date.start" data-date-format="yyyy-mm-dd" />
+                                <input type="text" class="input-small" name="online_date.start"
+                                       data-date-format="yyyy-mm-dd" />
                                 <i class="icon-arrow-right"></i>
-                                <input type="text" class="input-small" name="online_date.end" data-date-format="yyyy-mm-dd" />
+                                <input type="text" class="input-small" name="online_date.end"
+                                       data-date-format="yyyy-mm-dd" />
                                 <a href="#last0day">[% l('Today') %]</a> | <a href="#last7days">[% l('7 days') %]</a> | <a href="#last30days">[% l('30 days') %]</a> | <a href="#last60days">[% l('60 days') %]</a>
                             </div>
                           </div>
@@ -360,11 +363,14 @@
                         <tr>
                           <th colspan="2" class="pull-left">
                           <div class="control-group">
-                            <div class="input-daterange datepicker controls">
+                            <div class="input-daterange controls"
+                                 data-date-format="yyyy-mm-dd">
                               <label class="control-label input-medium text-left">[% l('Detected Between:') %]</label>
-                              <input type="text" class="input-small" name="start" data-date-format="yyyy-mm-dd" />
+                              <input type="text" class="input-small" name="start"
+                                     data-date-format="yyyy-mm-dd" />
                               <i class="icon-arrow-right"></i>
-                              <input type="text" class="input-small" name="end" data-date-format="yyyy-mm-dd" />
+                              <input type="text" class="input-small" name="end"
+                                     data-date-format="yyyy-mm-dd" />
                               <a href="#last0day">[% l('Today') %]</a> | <a href="#last7days">[% l('7 days') %]</a> | <a href="#last30days">[% l('30 days') %]</a> | <a href="#last60days">[% l('60 days') %]</a>
                             </div>
                           </div>
