--- a/html/pfappserver/root/auditing/radiuslog/index.tt
+++ b/html/pfappserver/root/auditing/radiuslog/index.tt
@@ -34,11 +34,11 @@
               <thead>
                 <tr>
                   <td colspan="2">
-                    <div class="controls radiud_audit_log_datetimepicker">
-                      <input type="text" class="input-small datepicker" id="start_date"  name="start.date" value="[% start.date %]" data-date-format="yyyy-mm-dd" />
+                    <div class="controls radiud_audit_log_datetimepicker" data-date-format="yyyy-mm-dd">
+                      <input type="text" class="input-small input-date" id="start_date"  name="start.date" value="[% start.date %]" data-date-format="yyyy-mm-dd" />
                       <input type="text" name="start.time" id="start_time" value="[% start.time %]" class="timepicker-default input-small" placeholder="HH:MM"/>
                       <i class="icon-arrow-right"></i>
-                      <input type="text" class="input-small datepicker" id="end_date" name="end.date" value="[% end.date %]" data-date-format="yyyy-mm-dd" date-datestart="[% end_date %]" />
+                      <input type="text" class="input-small input-date" id="end_date" name="end.date" value="[% end.date %]" data-date-format="yyyy-mm-dd" date-datestart="[% end_date %]" />
                       <input type="text" name="end.time" id="end_time" value="[% end.time %]" class="timepicker-default input-small" placeholder="HH:MM"/>
                       [% l('Last') %]
                       <a href="#last30mins">[% l('30 minutes') %]</a> |
