--- a/html/pfappserver/root/configurator/configuration.tt
+++ b/html/pfappserver/root/configurator/configuration.tt
@@ -1,28 +1,30 @@
 [% jsFiles = ['configurator/configuration'] -%]
-    <div class="container">
+    <div class="container-fluid">
       [% INCLUDE configurator/tracker.inc %]
-      <div class="row">
-        <div class="span3">
+      <div class="row-fluid">
+        <div class="span4">
           <div class="page-header step">
             <h1>[% l('Step') %] [% step_index %]</h1>
           </div>
         </div>
-        <div class="span9">
+        <div class="span14">
           <div class="page-header">
             <h1>[% l('PacketFence Configuration') %]
             <small>[% l('Setup your NAC') %]</small></h1>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="span3">
+      <div class="row-fluid">
+        <div class="span4">
           <div class="well">
             <h3>[% l('Instructions') %]</h3>
             <p>[% l('This step covers some basic configuration parameters required to have a functional PacketFence installation.') %]</p>
           </div>
         </div>
-        <div class="span9">
-          <form name="config" class="form-horizontal">
+        <div class="span14">
+          <div class="card">
+            <form name="config" class="form-horizontal">
+              <div class="card-block">
             <h3>[% l('General') %]</h3>
             <div class="control-group">
               <label class="control-label" for="general_domain">[% l('Domain') %]</label>
@@ -78,15 +80,12 @@
                 </label>
               </div>
             </div>
-            <fieldset>
+            </div>
             <div class="form-actions">
               <button type="submit" class="btn btn-primary pull-right" href="[% next_step %]">[% l('Continue') %] <i class="icon-circle-arrow-right icon-white"></i></button>
             </div>
-            </fieldset>
             </form>
+          </div>
         </div>
       </div>
-      <footer>
-        <p>&copy; Inverse 2017</p>
-      </footer>
     </div><!--/container-->
