--- a/html/pfappserver/root/config/profile/files.tt
+++ b/html/pfappserver/root/config/profile/files.tt
@@ -114,6 +114,7 @@ td a.btn { margin-left: 5px; }
   </table>
 [%- END -%]
 
+<div class="card">
 <h2></h2>
 <div id="connection_profile_files">
   <div class="modal fade hide" id="newFileModal">
@@ -212,3 +213,4 @@ td a.btn { margin-left: 5px; }
     </div><!-- #files pane -->
   </div><!-- .tab-content -->
 </div><!-- #connection_profile_files -->
+</div>
