fixing card-block for connection profile

--- a/html/pfappserver/root/config/profile/edit.tt
+++ b/html/pfappserver/root/config/profile/edit.tt
@@ -10,6 +10,7 @@
   paths = full_file_name.split('/')
 %]
 <div class="card">
+<div class="card-block">
 <div id="connection_profile_file_editor" >
     <div class="modal fade hide" id="cancelEdit">
       <div class="modal-header">
@@ -106,5 +107,6 @@
       </form>
     </div>
 
+</div>
 </div>
 </div>
