--- a/html/pfappserver/root/config/scan/index.tt
+++ b/html/pfappserver/root/config/scan/index.tt
@@ -25,7 +25,8 @@
             <a class="btn dropdown-toggle" data-toggle="dropdown">[% l('Add Scan') %] <span class="caret"></span></a>
             <ul id="createSource" class="dropdown-menu up">
               [% FOREACH type IN types -%]
-                <li><a class="createItem" href="[% c.uri_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
+                [% SET label = "scan_type_$type"%]
+                <li><a class="createItem" href="[% c.uri_for(c.controller.action_for('create_type'), type) %]">[% l(label) %]</a></li>
               [% END -%]
             </ul>
           </div>
